@@ -11,7 +11,6 @@ import com.erp.Security.Filter.TokenBlackListService;
 import com.erp.Security.JWT.JWTService;
 import com.erp.Security.util.CookieManager;
 import com.erp.Security.util.UserRepositoryRegistry;
-import com.erp.Service.Auth.GenericAuthServiceImpl;
 import com.erp.Tenant.Filter.TenantCleanupFilter;
 import com.erp.Tenant.Filter.TenantFilter;
 import lombok.AllArgsConstructor;
@@ -21,6 +20,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.access.hierarchicalroles.RoleHierarchy;
 import org.springframework.security.access.hierarchicalroles.RoleHierarchyImpl;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -39,7 +39,8 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.List;
+
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -77,11 +78,9 @@ public class SecurityConfig {
     @Bean
     public UserDetailsService userDetailsService() {
         return username -> {
-            log.debug("Resolving tenant schema from MetaAdmin for user: {}", username);
             try (var context = new TenantContextHolder("public")) {
                 String schemaName = metaAdminRepository.findSchemaNameByAdminEmail(username)
                         .orElseThrow(() -> new UsernameNotFoundException("No schema mapped for user: " + username));
-                log.debug("Resolved schema '{}' for user '{}'", schemaName, username);
                 TenantContext.setCurrentTenant(schemaName);
             }
             return userRepositoryRegistry.findUserByEmail(username)
@@ -112,21 +111,22 @@ public class SecurityConfig {
         return registrationBean;
     }
 
+    // ===================== Security Filter Chains ======================
+
     @Bean
     @Order(1)
     public SecurityFilterChain publicSecurityFilterChain(HttpSecurity http, AuthenticationManager authManager) throws Exception {
         String baseUrl = env.getBaseUrl();
-        log.info("Configuring public filter chain for {}", baseUrl + "/auth/**");
         return http
                 .securityMatcher(baseUrl + "/auth/**", baseUrl + "/login")
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(baseUrl + "/auth/register/**", baseUrl + "/login").permitAll()
                         .anyRequest().authenticated())
-                .authenticationManager(authManager) // ✅ THIS LINE IS CRITICAL
+                .authenticationManager(authManager)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .anonymous(anonymous -> anonymous.principal("anonymousUser").authorities("ROLE_ANONYMOUS"))
                 .build();
     }
 
@@ -134,16 +134,17 @@ public class SecurityConfig {
     @Order(2)
     public SecurityFilterChain refreshSecurityFilterChain(HttpSecurity http) throws Exception {
         String baseUrl = env.getBaseUrl();
-        log.info("Configuring refresh filter chain for {}", baseUrl + "/refresh-login/**");
         return http
                 .securityMatcher(baseUrl + "/refresh-login/**")
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(authorize -> authorize
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(baseUrl + "/refresh-login/**").permitAll()
                         .anyRequest().authenticated())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(new RefreshAuthFilter(jwtService, tokenBlackListService), UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(new RefreshAuthFilter(jwtService, tokenBlackListService),
+                        UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
@@ -151,33 +152,43 @@ public class SecurityConfig {
     @Order(3)
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         String baseUrl = env.getBaseUrl();
-        log.info("Configuring default filter chain for {}", baseUrl + "/**");
         return http
                 .securityMatcher("/**")
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers(baseUrl + "/admins/**").hasAnyAuthority("ROLE_ROOT")
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers(baseUrl + "/admins/**").hasAuthority("ROLE_ROOT")
                         .requestMatchers(baseUrl + "/roles/**").hasAnyAuthority("ROLE_ROOT", "ROLE_ADMIN")
-                        .requestMatchers(baseUrl + "/user", baseUrl + "/user/delete/**").hasAnyAuthority("ROLE_ADMIN")
+                        .requestMatchers(baseUrl + "/user", baseUrl + "/user/delete/**").hasAuthority("ROLE_ADMIN")
                         .requestMatchers(baseUrl + "/user/update/**").hasRole("EMPLOYEE")
                         .requestMatchers(baseUrl + "/logout").authenticated()
                         .anyRequest().authenticated())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(new AuthFilter(jwtService, tokenBlackListService, userRepositoryRegistry), UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(new AuthFilter(jwtService, tokenBlackListService, userRepositoryRegistry),
+                        UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
+
+    // ===================== CORS ======================
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true); // allow cookies / JWT via headers
-        config.setAllowedOrigins(List.of("http://localhost:3000","http://localhost:5174"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // typical REST methods
-        config.setAllowedHeaders(List.of("*")); // allow all headers
-        config.setExposedHeaders(List.of("Authorization")); // expose the Authorization header
+
+        config.setAllowCredentials(true);
+        config.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://localhost:5174",
+                "https://erpaurifex.netlify.app"
+        ));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+
         return source;
     }
 }
